--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'jacoco'
 
-sourceCompatibility = 1.5
 version = '1.0'
 
 repositories {
@@ -10,4 +9,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
 }
